# LearnOpenGL

./: CMakeLists.txt
assets/objects/GF2/: GirlsFrontline PerityaDefault.pmx
include/: mesh.h  model.h  shader.h
src/01.Hello_window/: main.cpp
src/02.Hello_Triangle/: main.cpp
src/04.Textures/: main.cpp
src/04.Textures/vsfs/: shader.fs  shader.vs
src/05.Transformations/: main.cpp
src/05.Transformations/vsfs/: shader.fs
src/06.Coordinate_Systems/: main.cpp
src/07.Camera/: main.cpp
src/08.Colors/: main.cpp
src/08.Colors/vsfs/: shader.fs
src/09.Basic_Lighting/: main.cpp
src/09.Basic_Lighting/vsfs/: shader.fs  shader.vs
src/1.getting_started/02.Hello_Triangle/: main.cpp
src/1.getting_started/04.Textures/: main.cpp
src/1.getting_started/05.Transformations/: main.cpp
src/1.getting_started/06.Coordinate_Systems/: main.cpp
src/1.getting_started/07.Camera/: main.cpp
src/1.getting_started/2.Hello_Triangle/: main.cpp
src/1.getting_started/4.Textures/: main.cpp
src/1.getting_started/5.Transformations/: main.cpp
src/1.getting_started/6.Coordinate_Systems/: main.cpp
src/1.getting_started/7.Camera/: main.cpp
src/10.Materials/: main.cpp
src/10.Materials/vsfs/: shader.fs
src/11.Lighting_maps/: main.cpp
src/11.Lighting_maps/vsfs/: shader.fs
src/12.Light_casters/1.Directional_Light/: main.cpp
src/13.Multiple_lights/: main.cpp
src/14.Model_Load/: main.cpp
src/15.Depth_testing/: main.cpp
src/16.Stencil_testing/: main.cpp  test.cpp
src/17.Blending/: main.cpp
src/18.Face_culling/: main.cpp
src/19.Framebuffers/: main.cpp
(+131 files in other folders)
